[package]
name = "unlisp_internal_macros"
version = "0.1.0"
authors = ["oleh.palianytsia <oleh.palianytsia@protonmail.com>"]
edition = "2018"

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
syn = { version = "0.15", features = ["full"] }
uuid = { version = "0.7", features = ["v4"] }

[lib]
proc-macro = true
