[package]
name = "runtime"
version = "0.1.0"
authors = ["oleh.palianytsia <oleh.palianytsia@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[lib]
name = "unlisp_rt"
crate-type = ["rlib", "staticlib"]