[package]
name = "unlisp_rt"
version = "0.1.0"
authors = ["oleh.palianytsia <oleh.palianytsia@protonmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
unlisp_internal_macros = { path = "../internal_macros" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0", optional = true }

[features]
default = []
llvm_defs = ["inkwell"]

[build-dependencies]
cc = "1.0"
